--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-query-devtools": "^5.91.1",
+    "@types/react-paginate": "^7.1.4",
     "axios": "^1.13.2",
     "formik": "^2.4.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-paginate": "^8.3.0",
     "yup": "^1.7.1"
   },
   "devDependencies": {
